--- a/.travis.yml
+++ b/.travis.yml
@@ -41,9 +41,18 @@ install:
   - conda config --add channels jlaura
   - conda config --set ssl_verify false
   - conda install python=$PYTHON_VERSION
-  - conda install -c conda-forge numpy cython pytest
+  - conda install -c conda-forge numpy cython
+
+
+  # Development installation
+  - conda install pytest pytest-cov
+  - pip install coveralls
 
 script:
-  - pytest --cov=cycsm
+  - pytest --cov=autocnet
   # clean up any remaining processes...
   - if [ $TRAVIS_OS_NAME == "linux" ]; then killall5; fi
+
+after_success:
+  # Upload to anaconda and push to coveralls
+  #- coveralls
