--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,15 @@ compiler:
   - gcc
   - clang
 
+addons:
+  apt:
+    sources:
+      - llvm-toolchain-precise
+      - ubuntu-toolchain-r-test
+    package:
+      - g++-4.8
+      - gcc-4.8
+
 branches:
   only:
     - master
@@ -17,15 +26,7 @@ os:
   - osx
 
 install:
-- if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-    - gcc-4.8
-    - g++-4.8
-    - clang
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
   # We do this conditionally because it saves us some downloading if the
   # version is the same.
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
@@ -70,3 +71,4 @@ script:
 after_success:
   # Upload to anaconda and push to coveralls
   #- coveralls
+
