--- a/.travis.yml
+++ b/.travis.yml
@@ -2,30 +2,30 @@ sudo: false
 
 compiler:
   - gcc
-  - clang
 
 branches:
   only:
     - master
 
-env:
-  matrix:
-    - PYTHON_VERSION: 3.5
+matrix:
+  include:
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++4.9
+          env:
+            - CXX=g++-4.9
+            - CC=gcc-4.9
+            - PYTHON_VERSION: 3.5
 
 os:
   - linux
   - osx
 
 install:
-- if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-    - gcc-4.8
-    - g++-4.8
-    - clang
   # We do this conditionally because it saves us some downloading if the
   # version is the same.
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
