--- a/.travis.yml
+++ b/.travis.yml
@@ -6,33 +6,32 @@ branches:
 
 matrix:
   include:
-    - compiler: gcc
+    # works on Precise and Trusty
+    - os: linux
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
           packages:
             - g++-4.9
-          env:
-            - CXX=g++-4.9
-            - CC=gcc-4.9
-            - PYTHON_VERSION=3.5
+      env:
+         - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
+         - PYTHON_VERSION="3.5"
 
-os:
-  - linux
-  - osx
+before_install:
+    - eval "${MATRIX_EVAL}"
 
 install:
   # We do this conditionally because it saves us some downloading if the
   # version is the same.
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-      if [ "$PYTHON_VERSION" == 2.7 ]; then
+      if [ "${PYTHON_VERSION}" == 2.7 ]; then
         wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
       else
         wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
       fi
     else
-      if ["$PYTHON_VERSION" == 2.7]; then
+      if ["${PYTHON_VERSION}" == 2.7]; then
         curl -o miniconda.sh  https://repo.continuum.io/miniconda/Miniconda-latest-MacOSX-x86_64.sh;
       else
         curl -o miniconda.sh  https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh;
@@ -50,7 +49,7 @@ install:
   - conda config --add channels conda-forge
   - conda config --add channels jlaura
   - conda config --set ssl_verify false
-  - conda install python=$PYTHON_VERSION
+  - conda install python=${PYTHON_VERSION}
   - conda install -c conda-forge numpy cython
 
 
