--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: false
+language: cpp
 
 branches:
   only:
@@ -15,12 +16,12 @@ matrix:
           packages:
             - g++-4.9
       env:
-         - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
-         - PYTHON_VERSION="3.5"
+         - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9 && PYTHON_VERSION=3.5"
 
 before_install:
     - eval "${MATRIX_EVAL}"
-
+    - $CXX --version
+    
 install:
   # We do this conditionally because it saves us some downloading if the
   # version is the same.
