--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,9 @@
 sudo: false
-language: cpp
+language: python
 
 branches:
   only:
     - master
-
-matrix:
-  include:
-    # works on Precise and Trusty
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-4.9
-      env:
-         - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9 && PYTHON_VERSION=3.5"
-
-before_install:
-    - eval "${MATRIX_EVAL}"
-    - $CXX --version
-    - $CC --version
 
 install:
   # We do this conditionally because it saves us some downloading if the
@@ -53,6 +35,7 @@ install:
   - conda config --set ssl_verify false
   - conda install python=${PYTHON_VERSION}
   - conda install -c conda-forge numpy cython
+  - conda install -c jlaura libcsm
 
 
   # Development installation
