--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 sudo: false
 language: python
 
+python:
+  - "3.4"
+  - "3.5"
+  - "3.6"
+
 branches:
   only:
     - master
@@ -29,11 +34,14 @@ install:
   # Useful for debugging any issues with conda
   - conda info -a
 
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
+  - source activate test-environment
+
   # Install dependencies
   - conda config --add channels conda-forge
   - conda config --add channels jlaura
   - conda config --set ssl_verify false
-  - conda install python=${PYTHON_VERSION}
+  - conda install python=$TRAVIS_PYTHON_VERSION
   - conda install -c conda-forge numpy cython
   - conda install -c jlaura libcsm
 
