--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,5 @@
 sudo: false
-language: python
-
-python:
-  - "3.4"
-  - "3.5"
-  - "3.6"
+language: cpp
 
 branches:
   only:
@@ -41,17 +36,18 @@ install:
   - conda config --add channels conda-forge
   - conda config --add channels jlaura
   - conda config --set ssl_verify false
-  - conda install python=$TRAVIS_PYTHON_VERSION
+  - conda install gcc
   - conda install -c conda-forge numpy cython
   - conda install -c jlaura libcsm
+
 
   # Development installation
   - conda install pytest pytest-cov
   - pip install coveralls
 
 script:
-  - python setup.py install
-  - pytest --cov=cycsm --ignore plio/examples
+  - conda build recipe
+  - pytest --cov=cycsm
   # clean up any remaining processes...
   - if [ $TRAVIS_OS_NAME == "linux" ]; then killall5; fi
 
