Updates for Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,7 @@ install:
   - pip install coveralls
 
 script:
+  - python setup.py install
   - pytest --cov=cycsm
   # clean up any remaining processes...
   - if [ $TRAVIS_OS_NAME == "linux" ]; then killall5; fi
