--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,22 @@
-sudo: false
+dist: trusty
+sudo: required
 language: python
 
 branches:
   only:
     - master
 
-python:
-  - "3.4"
-  - "3.5"
-  - "3.6"
+before_install:
+  - if
+      ["$TRAVIS_OS_NAME" == "linux"] ; then
+    fi
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
 
 install:
+  # Get gcc 4.8 installed
+  - sudo apt-get install -qq g++-4.8
+  - export CXX="g++-4.8"
   # We do this conditionally because it saves us some downloading if the
   # version is the same.
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
@@ -26,25 +32,23 @@ install:
         curl -o miniconda.sh  https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh;
       fi
     fi
+
+  # More conda setup to get miniconda in and a virtual env. setup
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
-  # Useful for debugging any issues with conda
-  - conda info -a
-
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
+  - conda info -a   # Useful for debugging any issues with conda
+  - conda create -q -n test-environment python=3.6
   - source activate test-environment
 
   # Install dependencies
   - conda config --add channels conda-forge
   - conda config --add channels jlaura
   - conda config --set ssl_verify false
-  - conda install gcc
   - conda install -c conda-forge numpy cython
   - conda install -c jlaura libcsm
-
 
   # Development installation
   - conda install pytest pytest-cov
