--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language: python
 python:
   - "3.5"
   - "3.6"
+
 os:
   - linux
   - osx
@@ -42,9 +43,7 @@ install:
 script:
   - python setup.py install
   - pytest --cov=cycsm
-  # clean up any remaining processes...
 
 after_success:
   - coveralls
-  - conda install conda-build && conda install anaconda-client && conda config --set anaconda_upload yes &&
-  conda build --token $CONDA_UPLOAD_TOKEN .
+  - conda install conda-build && conda install anaconda-client && conda config --set anaconda_upload yes && conda build --token $CONDA_UPLOAD_TOKEN .
