--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,12 +5,12 @@ package:
   version: {{ version }}
 
 source:
-  git_url: https://github.com/USGS-Astrogeology/CSM-CyCSM
-  git_rev: master
+  path: /Users/jlaura/github/usgs_csm/CSM-CyCSM 
+  #git_url: https://github.com/USGS-Astrogeology/CSM-CyCSM
+  #git_rev: master
 
 build:
   number: 0
-  detect_binary_files_with_prefix: true
 
 requirements:
   build:
@@ -18,21 +18,15 @@ requirements:
     - setuptools
     - numpy >=1.10
     - cython >=0.23
-    - libcsm >=3.0.1
+    - libcsm
   run:
     - python >=3.*
     - numpy >=1.10
-    - libcsm >=3.0.1
+    - libcsm
 
 test:
-  requires:
-    - pytest
-
   imports:
-    - cycsm.isd
-    - cycsm.model
-    - cycsm.csm
-    - cycsm.examples
+    - cycsm
 
 about:
   home: https://github.com/USGS-Astrogeology/CSM-CyCSM
