--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,9 +5,8 @@ package:
   version: {{ version }}
 
 source:
-  path: /Users/jlaura/github/usgs_csm/CSM-CyCSM
-  #git_url: https://github.com/USGS-Astrogeology/CSM-CyCSM
-  #git_rev: master
+  git_url: https://github.com/USGS-Astrogeology/CSM-CyCSM
+  git_rev: master
 
 build:
   number: 1
