--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,9 +5,8 @@ package:
   version: {{ version }}
 
 source:
-  #git_url: https://github.com/USGS-Astrogeology/CSM-CyCSM
-  #git_rev: master
-  path: C:\Users\E5470\CSM-CyCSM
+  git_url: https://github.com/USGS-Astrogeology/CSM-CyCSM
+  git_rev: master
 
 build:
   number: 1
