--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ install:
   - cmd: conda config --set anaconda_upload yes
   - cmd: python setup.py install
 
-build: false
+build: off
 
 test_script:
   - cmd: pytest --cov=cycsm 
