--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,7 @@ configuration:
 install:
   - cmd: call C:\\Miniconda36-x64\Scripts\activate.bat
   - cmd: conda info
+  - cmd: where python
   - cmd: conda config --set always_yes yes --set changeps1 no
   - cmd: conda update -q conda
   - cmd: conda config --add channels usgs-astrogeology
@@ -24,12 +25,12 @@ install:
   - cmd: conda install -c usgs-astrogeology libcsm
   - cmd: conda install conda-build anaconda-client
   - cmd: conda config --set anaconda_upload yes
-  - cmd: python setup.py install
-
-build: off
+  
+build_script:
+  - python setup.py install
 
 test_script:
-  - cmd: pytest --cov=cycsm 
+  - pytest --cov=cycsm 
 
 on_success:
   - cmd: conda build --token %CONDA_UPLOAD_TOKEN% .
