--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,10 +25,9 @@ install:
   - cmd: conda install -c usgs-astrogeology libcsm
   - cmd: conda install conda-build anaconda-client
   - cmd: conda config --set anaconda_upload yes
-  # Get the PATH setup to also include the conda search
-  - cmd: set "PATH=%LIBRARY_BIN%;%LIBRARY_INC%;%LIBRARY_LIB%;%PATH%"
 
 build_script:
+  - python setup.py build_ext --include-dirs C:\\Miniconda36-x64\Library\include --library-dirs C:\\Miniconda36-x64\bin;C:\\Miniconda36-x64\lib
   - python setup.py install
 
 test_script:
