--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,4 +27,11 @@ install:
   - cmd: conda config --set anaconda_upload yes
   - conda build --token %CONDA_UPLOAD_TOKEN% .
 
+build_script:
+  - python setup.py install
 
+test_script:
+  - pytest --cov=cycsm 
+
+on_success:
+  - cmd: conda build --token %CONDA_UPLOAD_TOKEN% .
