--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
+language: generic
 
-language: generic  # Since we use conda, just go generic
-
-os:
-  - linux
-    addons:
-      apt:
-        sources:
-          - ubuntu-toolchain-r-test
-        packages:
-          - g++-6
-  - osx
-    osx_image: xcode9.1
-    sudo: false
-    compiler:
-      - clang
+matrix:
+  include:
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+    - os: osx
+      osx_image: xcode9.1
+      sudo: false
+      compiler:
+        - clang
 env:
   - PYTHON_VERSION=3.5
   - PYTHON_VERSION=3.6
@@ -23,13 +23,13 @@ branches:
     - master
 
 before_install:
-  if [ "$TRAVIS_OS_NAME" == "linux"]; then
-    export CC=gcc-6;
-    export CXX=g++-6;
-    wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-  else
-    curl -o miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh;
-  f
+  - if [ "$TRAVIS_OS_NAME" == "linux"]; then
+      export CC=gcc-6;
+      export CXX=g++-6;
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      curl -o miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh;
+    fi
 
   # More conda setup to get miniconda in and a virtual env. setup
   - bash miniconda.sh -b -p $HOME/miniconda
