--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,31 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-6
+      env:
+        - PYTHON_VERSION=3.5
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env:
+        - PYTHON_VERSION=3.6
     - os: osx
       osx_image: xcode9.1
       sudo: false
       compiler:
         - clang
-env:
-  - PYTHON_VERSION=3.5
-  - PYTHON_VERSION=3.6
+      env:
+        - PYTHON_VERSION=3.5
+    - os: osx
+      osx_image: xcode9.1
+      sudo: false
+      compiler:
+        - clang
+      env:
+        - PYTHON_VERSION=3.6
 
 branches:
   only:
