--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,11 @@ platform:
 configuration:
   - Release
 
+environment:
+  - LIBRARY_INC: C:\\Miniconda36-x64\Library\include
+  - LIBRARY_BIN: C:\\Miniconda36-x64\Library\bin
+  - LIBRARY_LIB: C:\\Miniconda36-x64\Library\lib
+
 install:
   - cmd: call C:\\Miniconda36-x64\Scripts\activate.bat
   - cmd: conda config --set always_yes yes --set changeps1 no
