--- a/.travis.yml
+++ b/.travis.yml
@@ -78,4 +78,4 @@ after_success:
   - source deactivate
   - conda install conda-build anaconda-client
   - conda config --set anaconda_upload yes
-  - conda build --quiet --token $CONDA_UPLOAD_TOKEN --python $PYTHON_VERSION .
+  - conda build -q --token $CONDA_UPLOAD_TOKEN --python $PYTHON_VERSION .
